- Greatly enhanced logging (goes to /var/log/cobbler/cobbler.log)
- New --no-triggers and --no-sync on "adds" for performance and other reasons
- pxe_just_once is now much faster.
- performance testing scripts (in source checkout)
- webui now uses Apache logging
- misc webui fixes
- remove -b from wgets since busybox doesn't have -b in wget
- rename default/sample kickstarts to avoid confusion
- ...

* Wed Nov 14 2007 - 0.6.4
- Changed permissions of auth.conf
- Fixes for working with rhn_yum_plugin
- still allow repo configuration for distro repos that have just 1 repo (like C5.1)
- disable CGI weblogging by default (backend logging TBA)
- fix WebUI handling of keep_updated (repo field) and netboot_enabled (system field)
- disable the blender_cache as it's running afoul of the sync code
- update htaccess file to only authenticate the webui, not nopxe.cgi and findks.cgi

* Wed Nov 07 2007 - 0.6.3
- Be able to define and use Multiple NICs per system
- Add --virt-cpus to profile editing
- Fix bug where WUI (XMLRPC) auth wasn't supported on EL4
- Add --virt-bridge to profile editing and NICs
- Added serializer_shelve (as option) for added performance/persistance over YAML, experimental in /etc/cobbler/modules.conf, see Wiki
- Backup state files and migrate state structures upon RPM upgrade
- Added some more redundant files (for unsupported distros) to the rsync.exclude file
- added pre-sync and post-sync triggers, service restarts are now handled by /var/lib/cobbler/triggers
- webui now uses htaccess (see manpage and Wiki for setup instructions)
- added pagination to the WUI to keep pages from growing overly long
- added --server-override parameter for help with multi-subnet configurations (also see Wiki)
- removed yum-utils as a hard requirement, cobbler check now looks for yum-utils
- fixed bug where cobbler would try to copy hardlinks to themselves during sync
- misc random bugfixing

* Fri Sep 28 2007 - 0.6.2