@@ -20,6 +20,7 @@ Cobbler CHANGELOG
 - misc webui fixes
 - remove -b from wgets since busybox doesn't have -b in wget
 - rename default/sample kickstarts to avoid confusion
+- allow imports to force usage of a specific kickstart template with --kickstart
 - ...
 
 * Wed Nov 14 2007 - 0.6.4
